Build fix, first stub junit tests and additional exception